@@ -46,7 +46,7 @@ Portions Copyright (C) 2008-2010 Raphael Geissert
 Portions Copyright (C) 2008-2010 Adam D. Barratt
 Portions Copyright (C) 2009 Stéphane Glondu
 Portions Copyright (C) 2010 Raphaël Hertzog
-Portions Copyright (C) 2010 Niels Thykier
+Portions Copyright (C) 2010-2011 Niels Thykier
 Portions Copyright (C) 2011 Gerfried Fuchs
 
 This program is free software; you may redistribute it and/or modify
