@@ -1,7 +1,5 @@
-I: overrides: hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz 2 more occurrences not shown
 I: overrides: hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz:12
 I: overrides: hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz:13
 I: overrides: hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz:14
 I: overrides: hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz:6
-I: overrides: unused-override hyphen-used-as-minus-sign usr/share/man/man1/foo.1.gz * more occurrences not shown
-N: 7 tags overridden (1 warning, 6 info)
+N: 8 tags overridden (1 warning, 7 info)
